# gstreamFace-Extractor

face-detection-project/: CMakeLists.txt  README.md
face-detection-project/src/: .face_cropper.cpp.swp  face_cropper.cpp
face_frame-detection/: README.md
face_frame-detection/src/: extract_frames.sh
